--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ nav ul{
 }
 
 nav ul li{
-    display:inline-block;
+    display: inline-block;
     margin-right: 20px;
 }
 
@@ -176,7 +176,7 @@ small{
     padding-top: 100px;
 }
 
-.testimonial col-3{
+.testimonial .col-3{
     text-align: center;
     padding: 40px 20px;
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.1);
@@ -184,7 +184,7 @@ small{
     transition: transform 0.5s;
 }
 
-.testimonial col-3 img{
+.testimonial .col-3 img{
     width: 50px;
     margin-top: 20px;
     border-radius: 50%;
