--- a/style.css
+++ b/style.css
@@ -327,6 +327,40 @@ ul{
     }
 }
 
+.row-2{
+    justify-content: space-between;
+    margin: 100px auto 50px;
+}
+
+select{
+    border: 1px solid #ff523b;
+    padding: 5px;
+}
+
+select:focus{
+    outline: none;
+}
+
+.page-btn{
+    margin: 0 auto 80px;
+}
+
+.page-btn span{
+    display: inline-block;
+    border: 1px solid #ff523b;
+    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    cursor: pointer;
+}
+
+.page-btn span:hover{
+    background: #ff523b;
+    color: #fff;
+}
+
 @media only screen and (max-width: 600px){
     .row{
         text-align: center;
@@ -335,3 +369,5 @@ ul{
         flex-basis: 100%;
     }
 }
+
+
